--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ioredis": "^5.4.2",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.6",
